Reordering admin password logic for anchore

--- a/chart/templates/anchore/values.yaml
+++ b/chart/templates/anchore/values.yaml
@@ -71,6 +71,11 @@ postgresql:
   postgresPort: {{ .Values.addons.anchore.database.port }}
   {{- end }}
 
+{{- if .Values.addons.anchore.adminPassword }}
+anchoreConfig:
+  default_admin_password: {{ .Values.addons.anchore.adminPassword }}
+{{- end }}
+
 feeds:
   feeds-db:
     {{- if .Values.istio.enabled }}
