fix jaeger hosts test values

--- a/tests/test-values.yaml
+++ b/tests/test-values.yaml
@@ -117,7 +117,7 @@ jaeger:
             enabled: true
             spec:
               hosts:
-                - 'jaeger.bigbang.dev'
+                - 'tracing.bigbang.dev'
               location: MESH_EXTERNAL
               ports:
                 - number: 443
