--- a/docs/assets/configs/example/vault-production-values.yaml
+++ b/docs/assets/configs/example/vault-production-values.yaml
@@ -69,7 +69,7 @@ addons:
 
           # tell the deployments where our Vault API endpoint is
           # see https://github.com/hashicorp/vault-helm/issues/789
-          apiAddr: "https://vault.bigbang.dev"
+          apiAddr: "https://vault.dev.bigbang.mil"
 
           # raft is the license free most simple solution for a distributed filesystem
           raft:
@@ -95,21 +95,21 @@ addons:
                   leader_api_addr = "https://vault-vault-0.vault-vault-internal:8200"
                   leader_client_cert_file = "/vault/tls/tls.crt"
                   leader_client_key_file = "/vault/tls/tls.key"
-                  leader_tls_servername = "vault.bigbang.dev"
+                  leader_tls_servername = "vault.dev.bigbang.mil"
                 }
         
                 retry_join {
                   leader_api_addr = "https://vault-vault-1.vault-vault-internal:8200"
                   leader_client_cert_file = "/vault/tls/tls.crt"
                   leader_client_key_file = "/vault/tls/tls.key"
-                  leader_tls_servername = "vault.bigbang.dev"
+                  leader_tls_servername = "vault.dev.bigbang.mil"
                 }
         
                 retry_join {
                   leader_api_addr = "https://vault-vault-2.vault-vault-internal:8200"
                   leader_client_cert_file = "/vault/tls/tls.crt"
                   leader_client_key_file = "/vault/tls/tls.key"
-                  leader_tls_servername = "vault.bigbang.dev"
+                  leader_tls_servername = "vault.dev.bigbang.mil"
                 }
               }
 
