--- a/chart/values.yaml
+++ b/chart/values.yaml
@@ -457,7 +457,7 @@ gatekeeper:
   git:
     repo: https://repo1.dso.mil/big-bang/product/packages/policy.git
     path: "./chart"
-    tag: "null"
+    tag: null
     branch: "selinux-fix"
   helmRepo:
     repoName: "registry1"
