test minio branch

--- a/chart/values.yaml
+++ b/chart/values.yaml
@@ -1131,7 +1131,7 @@ addons:
 
   minio:
     # -- Toggle deployment of minio.
-    enabled: false
+    enabled: true
 
     # -- Choose source type of "git" or "helmRepo"
     sourceType: "git"
