update excludedResouces to exemptImages

--- a/tests/test-values.yaml
+++ b/tests/test-values.yaml
@@ -347,12 +347,12 @@ gatekeeper:
           - default/disallow-tolerations-.?
       selinuxPolicy:
         parameters:
-          excludedResources:
+          exemptImages:
           # Allow kyverno test vectors for Helm test
-          - default/c.?
-          - default/i.?
-          - default/disallow-selinux-options-.?
-          - default/restrict-selinux-type-.?
+          - default/c.*
+          - default/i.*
+          - default/disallow-selinux-options-.*
+          - default/restrict-selinux-type-.*
           - default/not-me
       volumeTypes:
         parameters:
