--- a/tests/test-values.yaml
+++ b/tests/test-values.yaml
@@ -349,10 +349,10 @@ gatekeeper:
         parameters:
           excludedResources:
           # Allow kyverno test vectors for Helm test
-          - default/c.*
-          - default/i.*
-          - default/disallow-selinux-options-.*
-          - default/restrict-selinux-type-.*
+          - default/c.?
+          - default/i.?
+          - default/disallow-selinux-options-.?
+          - default/restrict-selinux-type-.?
           - default/not-me
       volumeTypes:
         parameters:
