--- a/tests/test-values.yaml
+++ b/tests/test-values.yaml
@@ -1219,7 +1219,7 @@ neuvector:
             memory: "1500M"
 
 twistlock:
-  enabled: false
+  enabled: true
   sso:
     enabled: false
     client_id: dev_00eb8904-5b88-4c68-ad67-cec0d2e07aa6_twistlock-saml
