Include Defender setup

--- a/tests/test-values.yaml
+++ b/tests/test-values.yaml
@@ -1274,6 +1274,10 @@ twistlock:
       persistence:
         size: 5Gi
       localVolumeUpgrade: true
+    defender:
+      enabled: true
+      dockerSocket: "/run/k3s/containerd/containerd.sock"
+      selinux: false
     bbtests:
       enabled: true
       scripts:
