--- a/chart/values.yaml
+++ b/chart/values.yaml
@@ -462,7 +462,8 @@ gatekeeper:
   helmRepo:
     repoName: "registry1"
     chartName: "gatekeeper"
-    tag: "3.15.0-bb.0"
+    tag: null
+    branch: "updateSelinux"
 
   # -- Flux reconciliation overrides specifically for the OPA Gatekeeper Package
   flux:
