--- a/chart/values.yaml
+++ b/chart/values.yaml
@@ -1131,7 +1131,7 @@ addons:
 
   minio:
     # -- Toggle deployment of minio.
-    enabled: true
+    enabled: false
 
     # -- Choose source type of "git" or "helmRepo"
     sourceType: "git"
