--- a/chart/templates/loki/values.yaml
+++ b/chart/templates/loki/values.yaml
@@ -10,7 +10,7 @@ openshift: {{ .Values.openshift }}
 istio:
   enabled: {{ .Values.istio.enabled }}
   hardened:
-    {{- if or (dig "istio" "hardened" "enabled" .Values.loki.values) (dig "istio" "hardened" "enabled" .Values.elasticsearchKibana.values) }}
+    {{- if or (dig "istio" "hardened" "enabled" false .Values.loki.values) (dig "istio" "hardened" "enabled" false .Values.elasticsearchKibana.values) }}
     enabled: true
     {{- else }}
     enabled: false
