update minio test-values

--- a/tests/test-values.yaml
+++ b/tests/test-values.yaml
@@ -1819,6 +1819,9 @@ addons:
             runAsUser: 1001
             runAsGroup: 1001
             runAsNonRoot: true
+            capabilities:
+              drop:
+                - ALL
       bbtests:
         # There have been intermittent failures of the tests in the past.   The issue is tracked in the below issue.
         # https://repo1.dso.mil/big-bang/product/packages/minio/-/issues/7
@@ -1899,6 +1902,9 @@ addons:
               fsGroupChangePolicy: "OnRootMismatch"
               runAsNonRoot: true
             containerSecurityContext:
+              runAsUser: 1001
+              runAsGroup: 1001
+              runAsNonRoot: true
               capabilities:
                 drop:
                   - ALL
