--- a/tests/test-values.yaml
+++ b/tests/test-values.yaml
@@ -1993,6 +1993,9 @@ addons:
       persistence:
         # Do NOT set this below 5Gi, nexus will fail to boot
         storageSize: 5Gi
+      istio:
+        hardened:
+          enabled: true
       nexus:
       # https://help.sonatype.com/repomanager3/installation/system-requirements#SystemRequirements-JVMDirectMemory
         env:
