--- a/chart/values.yaml
+++ b/chart/values.yaml
@@ -1769,7 +1769,8 @@ addons:
     git:
       repo: https://repo1.dso.mil/big-bang/product/packages/keycloak.git
       path: "./chart"
-      tag: "23.0.7-bb.3"
+      tag: null
+      branch: "141-confidential-issue"
     helmRepo:
       repoName: "registry1"
       chartName: "keycloak"
