--- a/tests/test-values.yaml
+++ b/tests/test-values.yaml
@@ -1028,6 +1028,9 @@ promtail:
 
 monitoring:
   enabled: true
+  git:
+    tag: null
+    branch: "159-egress-whitelist-monitoring"
   flux:
     timeout: 20m
     install:
@@ -1046,14 +1049,64 @@ monitoring:
     istio:
       hardened:
         enabled: true
-    prometheus:
-      prometheusSpec:
-        replicas: 1
-        resources:
-          requests:
-            cpu: 100m
-            memory: 200Mi
-          limits: {}
+        customServiceEntries:
+          - name: "allow-npm-for-cypress-tests-monitoring"
+            enabled: true
+            spec:
+              hosts:
+                - 'registry.npmjs.org'
+                - 'download.cypress.io'
+                - 'cdn.cypress.io'
+              location: MESH_EXTERNAL
+              ports:
+                - number: 443
+                  protocol: TLS
+                  name: https
+              resolution: DNS
+          - name: "allow-repo1-for-cypress-monitoring"
+            enabled: true
+            spec:
+              hosts:
+                - 'repo1.dso.mil'
+              location: MESH_EXTERNAL
+              ports:
+                - number: 443
+                  protocol: TLS
+                  name: https
+              resolution: DNS
+          - name: "allow-prometheus-for-cypress-monitoring"
+            enabled: true
+            spec:
+              hosts:
+                - 'prometheus.dev.bigbang.mil'
+              location: MESH_EXTERNAL
+              ports:
+                - number: 443
+                  protocol: TLS
+                  name: https
+              resolution: DNS
+          - name: "allow-grafana-for-cypress-monitoring"
+            enabled: true
+            spec:
+              hosts:
+                - 'grafana.dev.bigbang.mil'
+              location: MESH_EXTERNAL
+              ports:
+                - number: 443
+                  protocol: TLS
+                  name: https
+              resolution: DNS
+          - name: "allow-alertmanager-for-cypress-monitoring"
+            enabled: true
+            spec:
+              hosts:
+                - 'alertmanager.dev.bigbang.mil'
+              location: MESH_EXTERNAL
+              ports:
+                - number: 443
+                  protocol: TLS
+                  name: https
+              resolution: DNS
 
     kube-state-metrics:
       resources:
