Adding test branch to addons.minio
Signed-off-by: Chris Harden <chris@defenseunicorns.com>

--- a/tests/test-values.yaml
+++ b/tests/test-values.yaml
@@ -1866,6 +1866,9 @@ addons:
 
   minio:
     enabled: false
+    git:
+      tag: null
+      branch: "registry-only-sidecar-minio"
     values:
       tenant:
         pools:
