Adding customServiceEntries to allow cypress tests to exersice console.minio-operator
Signed-off-by: Chris Harden <chris@defenseunicorns.com>

--- a/tests/test-values.yaml
+++ b/tests/test-values.yaml
@@ -1865,6 +1865,16 @@ addons:
         enabled: true
         hardened:
           enabled: true
+          customAuthorizationPolicies:
+            - name: "test-for-allowing-monitoring"
+              enabled: true
+              spec:
+                action: ALLOW
+                rules:
+                  - from:
+                    - source:
+                        namespaces:
+                          - minio-operator
           customServiceEntries:
             - name: "allow-npm-for-cypress-tests"
               enabled: true
