--- a/tests/test-values.yaml
+++ b/tests/test-values.yaml
@@ -115,7 +115,7 @@ jaeger:
             enabled: true
             spec:
               hosts:
-                - 'tracing.bigbang.dev'
+                - 'tracing.dev.bigbang.mil'
               location: MESH_EXTERNAL
               ports:
                 - number: 443
