Testing loki package before mr-bot
Signed-off-by: Chris Harden <chris@defenseunicorns.com>

--- a/tests/test-values.yaml
+++ b/tests/test-values.yaml
@@ -885,6 +885,9 @@ fluentbit:
 
 
 loki:
+  git:
+    tag: null
+    branch: "add-missing-authpol-for-minio-operator"
   strategy: scalable
   values:
     istio:
