thanos securityContext fix

--- a/tests/test-values.yaml
+++ b/tests/test-values.yaml
@@ -2349,6 +2349,9 @@ addons:
               runAsUser: 1001
               runAsGroup: 1001
               runAsNonRoot: true
+              capabilities:
+                drop:
+                  - ALL
       storegateway:
         enabled: true
       bbtests:
