--- a/chart/values.yaml
+++ b/chart/values.yaml
@@ -2007,7 +2007,8 @@ addons:
 
     git:
       repo: https://repo1.dso.mil/big-bang/product/packages/thanos.git
-      tag: "13.2.2-bb.2"
+      tag: null
+      branch: 42-confdential-issue"
       path: "./chart"
     helmRepo:
       repoName: "registry1"
