--- a/tests/test-values.yaml
+++ b/tests/test-values.yaml
@@ -854,7 +854,8 @@ loki:
                   protocol: TLS
                   name: https
               resolution: DNS
-
+    minio-operator:
+      enabled: true
     minio:
       enabled: true
     write:
