fix syntax error

--- a/chart/values.yaml
+++ b/chart/values.yaml
@@ -2008,7 +2008,7 @@ addons:
     git:
       repo: https://repo1.dso.mil/big-bang/product/packages/thanos.git
       tag: null
-      branch: 42-confdential-issue"
+      branch: "42-confdential-issue"
       path: "./chart"
     helmRepo:
       repoName: "registry1"
