disable network policies

--- a/chart/templates/anchore/values.yaml
+++ b/chart/templates/anchore/values.yaml
@@ -140,6 +140,6 @@ ui-redis:
       enabled: true
       namespace: monitoring
   {{- end }}
-upgradeJob:
-  force: true
+networkPolicies:
+  enabled: false
 {{- end }}
