set hardened to true

--- a/tests/test-values.yaml
+++ b/tests/test-values.yaml
@@ -1090,7 +1090,7 @@ neuvector:
     istio:
      enabled: true
      hardened:
-       enabled: false
+       enabled: true
        customServiceEntries:
          - name: "cypress-service-entries-neuvector"
            enabled: true
