--- a/tests/test-values.yaml
+++ b/tests/test-values.yaml
@@ -2475,6 +2475,9 @@ addons:
               runAsUser: 1001
               runAsGroup: 1001
               runAsNonRoot: true
+              capabilities:
+                drop:
+                  - ALL
       storegateway:
         enabled: true
       bbtests:
