--- a/tests/test-values.yaml
+++ b/tests/test-values.yaml
@@ -161,6 +161,26 @@ clusterAuditor:
           cypress_grafana_url: 'https://grafana.dev.bigbang.mil'
           cypress_prometheus_url: 'https://prometheus.dev.bigbang.mil'
           cypress_url: 'https://grafana.dev.bigbang.mil/d/YBgRZG6Mz/opa-violations?orgId=1'
+    istio:
+      hardened:
+        enabled: true
+        customServiceEntries:
+          - name: "cypress-service-entries-cluster-auditor"
+            enabled: true
+            spec:
+              hosts:
+                - 'registry.npmjs.org'
+                - 'download.cypress.io'
+                - 'cdn.cypress.io'
+                - 'repo1.dso.mil'
+                - 'grafana.dev.bigbang.mil'
+                - 'prometheus.dev.bigbang.mil'
+              location: MESH_EXTERNAL
+              ports:
+                - number: 443
+                  protocol: TLS
+                  name: https
+              resolution: DNS
 
 gatekeeper:
   enabled: false
