--- a/chart/templates/kyverno-policies/values.yaml
+++ b/chart/templates/kyverno-policies/values.yaml
@@ -180,6 +180,7 @@ policies:
     {{- if .Values.neuvector.enabled }}
     exclude:
       any:
+      {{- if .Values.neuvector.enabled }}
       # Neuvector needs access to host to inspect network traffic
       - resources:
           namespaces:
@@ -187,6 +188,20 @@ policies:
           names:
           - neuvector-enforcer-pod*
           - neuvector-prometheus-exporter-pod*
+    {{- end }}
+    {{- if .Values.keycloak.enabled }}
+      - resources:
+          namespaces:
+          - keycloak
+          names:
+          - keycloak-0
+    {{- end }}
+    {{- if .Values.holocron.enabled }}
+      - resources:
+          namespaces:
+          - holocron
+          names:
+          - holocron-postgresql-0
     {{- end }}
 
   # Kyverno Beta feature - https://kyverno.io/docs/writing-policies/verify-images/
