Resolve "Ensure that istio.hardened.enabled is turned on for all packages in test-values.yaml for packages that support it"

--- a/tests/test-values.yaml
+++ b/tests/test-values.yaml
@@ -81,6 +81,18 @@ jaeger:
     client_id: dev_00eb8904-5b88-4c68-ad67-cec0d2e07aa6_jaeger
   values:
     istio:
+      hardened:
+        enabled: true
+        customAuthorizationPolicies:
+          - name: "allow-intranamespace-jaeger"
+            enabled: true
+            spec:
+              action: ALLOW
+              rules:
+              - from:
+                - source:
+                    namespaces:
+                    - jaeger
       jaeger:
         enabled: true
     bbtests:
@@ -782,7 +794,7 @@ elasticsearchKibana:
             enabled: true
             spec:
               hosts:
-                - 'kibana.dev.bigbang.mil'                
+                - 'kibana.dev.bigbang.mil'
               location: MESH_EXTERNAL
               ports:
                 - number: 443
@@ -821,6 +833,12 @@ elasticsearchKibana:
         envs:
           cypress_expect_logs: "true"
           cypress_kibana_url: "https://kibana.dev.bigbang.mil"
+
+eckOperator:
+  values:
+    istio:
+      hardened:
+        enabled: true
 
 fluentbit:
   enabled: false
@@ -864,7 +882,7 @@ loki:
                 - 'download.cypress.io'
                 - 'cdn.cypress.io'
                 - 'repo1.dso.mil'
-                - 'grafana.dev.bigbang.mil' 
+                - 'grafana.dev.bigbang.mil'
               location: MESH_EXTERNAL
               ports:
                 - number: 443
@@ -928,6 +946,28 @@ tempo:
       tempoQuery:
         hosts:
           - "tempo.{{ .Values.domain }}"
+      enabled: true
+      hardened:
+        enabled: true
+        customServiceEntries:
+          - name: "cypress-service-entries-tempo"
+            enabled: true
+            spec:
+              hosts:
+                - 'registry.npmjs.org'
+                - 'download.cypress.io'
+                - 'cdn.cypress.io'
+                - 'repo1.dso.mil'
+                - 'tempo.dev.bigbang.mil'
+                - 'grafana.dev.bigbang.mil'
+                - 'grafana.com'
+              location: MESH_EXTERNAL
+              ports:
+                - number: 443
+                  protocol: TLS
+                  name: https
+              resolution: DNS
+
     tempo:
       resources:
         limits: null
@@ -990,14 +1030,6 @@ monitoring:
     alertmanager:
       client_id: dev_00eb8904-5b88-4c68-ad67-cec0d2e07aa6_alertmanager
   values:
-    prometheus:
-      prometheusSpec:
-        replicas: 1
-        resources:
-          requests:
-            cpu: 100m
-            memory: 200Mi
-          limits: {}
     istio:
       hardened:
         enabled: true
@@ -1255,7 +1287,6 @@ addons:
             requests:
               cpu: 2
               memory: 2Gi
-        istio:
           sidecar:
             resources:
               cpu:
@@ -1264,6 +1295,9 @@ addons:
               memory:
                 requests: 512Mi
                 limits: 2048Mi
+      istio:
+        hardened:
+          enabled: false
 
   authservice:
     enabled: false
@@ -1664,6 +1698,19 @@ addons:
       name: name
       email: email
     values:
+      istio:
+        hardened:
+          enabled: true
+          customAuthorizationPolicies:
+            - name: "allow-intranamespace-sonarqube"
+              enabled: true
+              spec:
+                action: ALLOW
+                rules:
+                - from:
+                  - source:
+                      namespaces:
+                      - sonarqube
       plugins:
         install: []
       resources:
@@ -1698,17 +1745,43 @@ addons:
   minioOperator:
     enabled: true # Minio Operator is required for Loki in default core
     values:
-      istio:
-        console:
-          enabled: false
       console:
         enabled: true
       bbtests:
         enabled: true
+      istio:
+        console:
+          enabled: false
+        hardened:
+          enabled: true
+          customAuthorizationPolicies:
+            - name: "allow-intranamespace-minio-operator"
+              enabled: true
+              spec:
+                action: ALLOW
+                rules:
+                - from:
+                  - source:
+                      namespaces:
+                      - minio-operator
 
   minio:
     enabled: false
     values:
+      istio:
+        hardened:
+          enabled: true
+          customAuthorizationPolicies:
+            - name: "allow-intranamespace-minio"
+              enabled: true
+              spec:
+                action: ALLOW
+                rules:
+                - from:
+                  - source:
+                      namespaces:
+                      - minio
+                      - minio-operator
       tenant:
         pools:
         - servers: 3
@@ -1730,6 +1803,10 @@ addons:
             runAsUser: 1001
             runAsGroup: 1001
             runAsNonRoot: true
+            capabilities:
+              drop:
+              - ALL
+
       bbtests:
         # There have been intermittent failures of the tests in the past.   The issue is tracked in the below issue.
         # https://repo1.dso.mil/big-bang/product/packages/minio/-/issues/7
@@ -2200,6 +2277,9 @@ addons:
 
     # -- Values to pass through to Habor chart: https://repo1.dso.mil/big-bang/product/packages/harbor.git
     values:
+      istio:
+        hardened:
+          enabled: true
       expose:
         type: clusterIP
         tls:
@@ -2415,7 +2495,7 @@ addons:
     values:
       istio:
         hardened:
-          enabled: true    
+          enabled: true
       bbtests:
         enabled: true
         cypress:
