Update ElasticSearchKibana to 1.12.0-bb.1

--- a/chart/templates/elasticsearch-kibana/values.yaml
+++ b/chart/templates/elasticsearch-kibana/values.yaml
@@ -23,6 +23,9 @@ istio:
   kibana:
     gateways:
     - istio-system/{{ default "public" .Values.elasticsearchKibana.ingress.gateway }}
+  elasticsearch:
+    gateways:
+    - istio-system/{{ default "public" .Values.elasticsearchKibana.ingress.gateway }}
 
 networkPolicies:
   enabled: {{ .Values.networkPolicies.enabled }}
