fix customEntries values

--- a/tests/test-values.yaml
+++ b/tests/test-values.yaml
@@ -2294,7 +2294,7 @@ addons:
               enabled: true
               spec:
                 hosts:
-                  - 'repo1.d.com'
+                  - 'repo1.dso.mil'
                 location: MESH_EXTERNAL
                 exportTo:
                   - "."
@@ -2307,7 +2307,7 @@ addons:
               enabled: true
               spec:
                 hosts:
-                  - 'vault.dev.b.com'
+                  - 'vault.dev.bigbang.mil'
                 location: MESH_EXTERNAL
                 exportTo:
                   - "."
