test with new branch

--- a/tests/test-values.yaml
+++ b/tests/test-values.yaml
@@ -2192,7 +2192,7 @@ addons:
 
     git:
       tag: null
-      branch: 75-egress-whitelist-vault
+      branch: 75-vault-whitelist
 
     values:
       minio:
