--- a/chart/values.yaml
+++ b/chart/values.yaml
@@ -1293,7 +1293,8 @@ addons:
     git:
       repo: https://repo1.dso.mil/big-bang/product/packages/gitlab-runner.git
       path: "./chart"
-      tag: "0.63.0-bb.1"
+      tag: null
+      branch: "91-confidential-issue"
 
     helmRepo:
       repoName: "registry1"
